corrected link to wrong answer sound

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <audio id="correctSound" src="./assets/sfx/correct-6033.wav"></audio>
-    <audio id="incorrectSound" src="./assets/sfx/incorrect.wav"></audio>
+    <audio id="incorrectSound" src="./assets/sfx/wrong-buzzer-6268.wav"></audio>
 
     <div class="scores"><a href="./assets/pages/highscores.html">View Highscores</a></div>
 
