added play again button to leaderboard page

--- a/assets/pages/highscores.html
+++ b/assets/pages/highscores.html
@@ -12,6 +12,9 @@
 
   <h1>High Scores</h1>
 
+<a href="/index.html" class="button">Play Again</a>
+
+
   <ul id="high-scores-list">
     <!-- High scores will be dynamically added here -->
   </ul>
