--- a/assets/pages/highscores.html
+++ b/assets/pages/highscores.html
@@ -12,7 +12,7 @@
 
   <h1>High Scores</h1>
 
-<a href="https://codeswitchstudio.github.io/London-code-quiz/" class="button">Play Again</a>
+<a href="https://codeswitchstudio.github.io/weird-london-pubquiz/" class="button">Play Again</a>
 
 
   <ul id="high-scores-list">
